Changelog
=========

4.7.dev0 - (unreleased)
-----------------------
* Landitem view/Download: use button for login.
* Landitem view: Hide unused tabs. Metadata tab as default when no iframe and landfiles.
  [GhitaB #96128]

4.6 - (2018-06-15)
------------------
* Fix: Fix response headers for fonts files in order to fix IE bug for icons.
  [GhitaB #95088]

4.5 - (2018-05-31)
------------------
* Fix: Prevent error when uploaded file is empty in Admin land files.
  [GhitaB #95890]
* Fix: Prevent non-ascii error in user profile information form.
  [GhitaB #95900]

4.4 - (2018-05-22)
------------------
* Improve: homepage - show 4 news instead of 3.
  [GhitaB #95161]
* Fix: add validation in Register for domains (at least one checked).
  [GhitaB #95169]
* Fix: solve error for non-ascii chars in geotags (metadata tab of landitems).
  [GhitaB #94900]

4.3 - (2018-04-18)
------------------
* Improve: landitem view - use Download tab as default when map view is empty.
* Improve: homepage layout, add news carousel.
  [GhitaB #94690]
* Fix typo in field description.
  [GhitaB #92357]
* Fix js error in landitem view when map is missing.
  [GhitaB #93957]

4.2 - (2018-03-13)
------------------
* Improve: display geotags in metadata tab of landitem view.
  [GhitaB #90603]

4.1 - (2018-03-08)
------------------
* Fix: Register - fix errors generated by wrong template override.
  [GhitaB #92752]

4.0 - (2018-03-06)
------------------
* Feature: Use eea.geotags field for landitems. Initialize field value with
  existing selected countries geographic coverage.
  [GhitaB #90603]
* Feature: Add captcha field in register form.
  [GhitaB #92752]
* Feature: Register - override message template adding "Please ignore..." text.
  [GhitaB #92752]
* Fix: Landitem view - larger icons for map fullscreen mode.
  [GhitaB #92986]
* Fix: Multiple log errors regarding async land file downloads
  [batradav #93407]
* Fix: N/A Size for recently uploaded land files
  [batradav #92039]
