@@ -1,0 +1,7 @@
+<div tal:content="structure view/val" />
+<label class="disclaimer-permission">
+  I give permission to the Copernicus Land Monitoring Service to contact
+  me by e-mail with the information about the new products or product updates
+  and other important events in the service or for my feedback about the
+  products of the service and about this website.
+</label>
